--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,23 @@
 ---
 name: HTML-Template-LZE-Pages
-version: 0.24
+version: 0.25
 author:
-  - 'Dirk Lindner <lindnerei@o2online.de>'
+  - 'Dirk Lindner <lze@cpan.org>'
 abstract: Tool for Building HTML Pages
 license: lgpl
 resources:
   license: http://opensource.org/licenses/artistic-license.php
 requires:
-  CGI::LZE: 0.24
-  HTML::Template::LZE::Template: 0.24
+  CGI::LZE: 0.25
+  HTML::Template::LZE: 0.25
   Module::Build: 0.2808
   Test::More: 0.7
   Test::Pod: 1.26
   Test::Pod::Coverage: 0.55
-  Test::Signature: 1.1
 provides:
   HTML::Template::LZE::Pages:
     file: lib/HTML/Template/LZE/Pages.pm
-    version: 0.24
+    version: 0.25
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
