--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: HTML-Template-LZE-Pages
-version: 0.25
+version: 0.26
 author:
   - 'Dirk Lindner <lze@cpan.org>'
 abstract: Tool for Building HTML Pages
@@ -8,16 +8,16 @@ license: lgpl
 resources:
   license: http://opensource.org/licenses/artistic-license.php
 requires:
-  CGI::LZE: 0.25
-  HTML::Template::LZE: 0.25
-  Module::Build: 0.2808
-  Test::More: 0.7
-  Test::Pod: 1.26
-  Test::Pod::Coverage: 0.55
+  CGI::LZE: '>=0.25'
+  HTML::Template::LZE: '>=0.25'
+  Module::Build: '>=0.2808'
+  Test::More: '>=0.7'
+  Test::Pod: '>=1.26'
+  Test::Pod::Coverage: '>=0.55'
 provides:
   HTML::Template::LZE::Pages:
     file: lib/HTML/Template/LZE/Pages.pm
-    version: 0.25
+    version: 0.26
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
